--- a/index.html
+++ b/index.html
@@ -427,7 +427,6 @@
                 <li><a onclick="scrollToSection('tools')">Araçlar</a></li>
                 <li><a onclick="scrollToSection('features')">Özellikler</a></li>
                 <li><a onclick="scrollToSection('pricing')">Fiyatlar</a></li>
-                <li><a onclick="showContact()">İletişim</a></li>
             </ul>
             <button onclick="showPremiumModal()" class="premium-btn">💎 Premium</button>
         </nav>
@@ -1020,7 +1019,7 @@
         }
 
         function showContact() {
-            alert('📧 İletişim Bilgileri:\n\nE-mail: info@pdfaraclari.com\nTelefon: +90 212 123 45 67\n\nDemo versiyonunda gerçek iletişim formu bulunmamaktadır.');
+            // İletişim fonksiyonu kaldırıldı
         }
 
         // Modal dışına tıklayınca kapanma
