--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
         }
 
         function showContact() {
-            // İletişim fonksiyonu kaldırıldı
+            alert('📧 İletişim Bilgileri:\n\nE-mail: info@pdfaraclari.com\nTelefon: +90 212 123 45 67\n\nDemo versiyonunda gerçek iletişim formu bulunmamaktadır.');
         }
 
         // Modal dışına tıklayınca kapanma
