--- a/index.html
+++ b/index.html
@@ -674,8 +674,8 @@
 
     <footer class="footer">
         <p>&copy; 2025 PDF Araçları. Tüm hakları saklıdır.</p>
-        <p>Gizlilik Politikası | Kullanım Şartları | İletişim</p>
-        <p>📧 info@pdfaraclari.com | 📞 +90 212 123 45 67</p>
+        <p><a href="privacy.html" style="color: white; text-decoration: underline;">Gizlilik Politikası</a> | <a href="terms.html" style="color: white; text-decoration: underline;">Kullanım Şartları</a> | <a href="about.html" style="color: white; text-decoration: underline;">Hakkında</a></p>
+        <p>📧 info@pdfaraclari.it.com | 📞 +90 212 123 45 67</p>
     </footer>
 
     <!-- Premium Modal -->
@@ -1019,7 +1019,7 @@
         }
 
         function showContact() {
-            alert('📧 İletişim Bilgileri:\n\nE-mail: info@pdfaraclari.com\nTelefon: +90 212 123 45 67\n\nDemo versiyonunda gerçek iletişim formu bulunmamaktadır.');
+            // İletişim fonksiyonu kaldırıldı
         }
 
         // Modal dışına tıklayınca kapanma
