--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@
         }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5335284393133608"
+     crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <header class="header">
